--- a/style.css
+++ b/style.css
@@ -30,6 +30,20 @@ html, body {
     filter: saturate(1.7);
 }
 
+.narrow:target .panel {
+  flex-basis: 512px;
+}
+.narrow:target .panel:nth-child(1) {
+  flex-basis: 100%;
+}
+
+.wide:target .panel {
+  flex-basis: 1023px;
+}
+.wide:target .panel:nth-child(1) {
+  flex-basis: 100%;
+}
+
 .comic {
   display:flex;
   flex-wrap:wrap;
@@ -40,16 +54,16 @@ html, body {
 }
 
 .panel {
-  background-color:#000;
+  background-color: #000;
   text-align: center;
-  border:solid 2px #000;
-  box-shadow:0 6px 6px -6px #000;
-  display:inline-block;
-  flex:1 1;
+  border: solid 2px #000;
+  box-shadow: 0 6px 6px -6px #000;
+  display: inline-block;
+  flex: 1 1;
   height: 511px; /*this makes a better print layout*/
-  margin:1vmin;
-  overflow:hidden;
-  position:relative;
+  margin: 1vmin;
+  overflow: hidden;
+  position: relative;
   flex-basis: 512px;
 }
 .text {
@@ -106,9 +120,16 @@ html, body {
   flex-basis: 100%;
   height: 492px;
 }
+.panel:nth-child(1) img {
+  float: left;
+}
+.panel:nth-child(1) > .top-left {
+  font-size: 200%;
+}
 .foreword {
-  text-align: left;
+  text-align: center;
   color: #fff;
+  margin-bottom: 12px;
 }
 a {
   color: #fff;
@@ -121,7 +142,7 @@ a:active {
     font-size: 11pt;
     color: #fff;
 }
-.social-web {
+.social-print {
   display: none;
 }
 
